# dealiiX-portable-multigrid

./: .clang-format
include/base/: portable_laplace_operator_base.h  portable_mg_transfer_base.h  portable_subdomain_laplace_operator_base.h  portable_v_cycle_multigrid_base.h
include/domain_decomposition/: portable_bddc_preconditioner.h  portable_bnn_preconditioner.h  portable_schur_interface_operator.h  portable_solver_projected_cg.h  subdomain_dof_handler.h  subdomain_triangulation.h
include/kernels/: bk1_kokkos_kernels.h  bk3_kokkos_kernel.h  kokkos_kernels_rt.h  laplace_dg_kokkos_kernels.h  portable_local_laplace_operator.h
include/matrix_free/: portable_shape_info.h
include/multigrid/: portable_continuous_transfer.h  portable_geometric_transfer.h  portable_geometric_transfer_core.h  portable_polynomial_tranfer.h  portable_polynomial_transfer.h  portable_subdomain_v_cycle_multigrid.h  portable_v_cycle_multigrid.h
include/operators/: dummy_portable_laplace_operator.h  portable_laplace_operator.h  portable_laplace_operator_bk3.h  portable_laplace_operator_dg.h  portable_laplace_operator_quad.h  portable_momentum_operator_rt.h  portable_subdomain_bddc_operator_wrapper.h  portable_subdomain_laplace_operator.h  portable_subdomain_neumann_operator_wrapper.h
source/domain_decomposition/: program.cc
tests/performance/: CMakeLists.txt  performance_test_driver.h  timing_ph_mg.cc
tests/performance/results_cores/: 1-core-full_statistics.csv  1-core-matvec_only.csv  1-core-solves_only.csv  extract_info.py  output-cores-1.out  output-cores-2.out
(+57 files in other folders)
